--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/css/bootstrap.css" />
+      href="css/bootstrap.css" />
 
     <!-- fonts style -->
     <link
@@ -40,29 +40,29 @@
 
     <!-- font awesome style -->
     <link
-      href="/css/font-awesome.min.css"
+      href="css/font-awesome.min.css"
       rel="stylesheet" />
     <!-- Custom styles for this template -->
     <link
-      href="/css/style.css"
+      href="css/style.css"
       rel="stylesheet" />
     <!-- responsive style -->
     <link
-      href="/css/responsive.css"
+      href="css/responsive.css"
       rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
     <script
       type="module"
-      src="/src/main.jsx"></script>
+      src="src/main.jsx"></script>
 
     <!-- jQery -->
-    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
     <!-- bootstrap js -->
-    <script src="/js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
     <!-- custom js -->
-    <script src="/js/custom.js"></script>
+    <script src="js/custom.js"></script>
     <!-- Google Map -->
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script> -->
     <!-- End Google Map -->
